# glb2stl

./: .gitignore  LICENSE.txt  README.md  output.stl  pyproject.toml
src/glb2stl/: __about__.py  __main__.py  app.py  config.py  logging_config.py  schemas.py  versioning.py
src/glb2stl/routers/: convert.py  health.py
src/glb2stl/services/: glb.py
tests/: __init__.py  test_health.py
